--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
     <head>
         
     </head>
+    <style>
+        #divHead, canvas {    
+            padding-left: 0;
+            padding-right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+            width: 800px;}
+        #divHead {
+            width:810px;
+            padding-bottom:10px;
+        }
+    </style>
+        
+
     <h1>Pachinko Pinball</h1>
     <body>
-        <div id="divScore">
-            Score:<p style='display:inline;'></p>
-        </div>
+        <div id="divHead">
+            <div id="divScore" style="float:left">
+                Score:<p style='display:inline;'></p>
+            </div>
+            <div id="divBalls" style="float:right">
+                Balls:<p style='display:inline;'>3</p>
+            </div>
+        </div>        
         <br>
     </body>
     <script src="/jq/jquery.min.js"></script>
