--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
-        
+        <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     </head>
     <style>
+        body { font-family: 'Quicksand', sans-serif;}
+        h1,p  { text-align: center}
+        p { font-style: italic; }
         #divHead, canvas {    
             padding-left: 0;
             padding-right: 0;
@@ -15,9 +18,8 @@
             padding-bottom:10px;
         }
     </style>
-        
-
     <h1>Pachinko Pinball</h1>
+    <p>Press Enter to launch, SpaceBar for a new ball, 1 to reload balls</p>
     <body>
         <div id="divHead">
             <div id="divScore" style="float:left">
